[project]
name = "vin_isipl"
authors = [
    { name = "Vintrosys", email = "admin@vintrosys.com"}
]
description = "Vin Isipl"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Required for Bench v15+
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

# Dev dependencies (optional)
[tool.bench.dev-dependencies]
