[project]
name = "vin_isipl"
authors = [
    { name = "Vintrosys", email = "admin@vintrosys.com"}
]
description = "Vin Isipl"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Required for Bench v16
[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"

[tool.bench.dev-dependencies]
